--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "yup": "^0.26.6"
   },
   "scripts": {
     "start": "react-scripts start",
