--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^23.3.10",
+    "@types/node": "^10.12.12",
+    "@types/react": "^16.7.13",
+    "@types/react-dom": "^16.0.11",
     "axios": "^0.18.0",
     "formik": "^1.3.2",
     "react": "^16.6.0",
@@ -10,7 +14,8 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5",
+    "react-scripts": "2.1.1",
+    "typescript": "^3.2.1",
     "yup": "^0.26.6"
   },
   "scripts": {
