--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.12",
     "@types/react": "^16.7.13",
+    "@types/react-bootstrap": "^0.32.15",
     "@types/react-dom": "^16.0.11",
     "axios": "^0.18.0",
     "formik": "^1.3.2",
