--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "yup": "^0.26.6"
   },
   "devDependencies": {
-	"@types/jest": "^23.3.10",
+    "@types/jest": "^23.3.10",
     "@types/node": "^10.12.12",
     "@types/react": "^16.7.13",
     "@types/react-bootstrap": "^0.32.15",
     "@types/react-dom": "^16.0.11",
-	"typescript": "^3.2.1"
+    "@types/react-test-renderer": "^16.0.3",
+    "jest": "^23.6.0",
+    "react-test-renderer": "^16.6.3",
+    "ts-jest": "^23.1.4",
+    "typescript": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
