--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/react-bootstrap": "^0.32.15",
     "@types/react-dom": "^16.0.11",
     "@types/react-test-renderer": "^16.0.3",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "jest": "^23.6.0",
     "react-test-renderer": "^16.6.3",
     "typescript": "^3.2.1"
