--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme-adapter-react-16": "^1.7.1",
     "jest": "^23.6.0",
     "react-test-renderer": "^16.6.3",
+    "react-testing-library": "^5.3.2",
     "typescript": "^3.2.1"
   },
   "scripts": {
