--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-bootstrap": "^0.32.15",
     "@types/react-dom": "^16.0.11",
     "@types/react-test-renderer": "^16.0.3",
+    "axios-mock-adapter": "^1.15.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "jest": "^23.6.0",
