--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios-mock-adapter": "^1.15.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
+    "eslint": "^5.15.3",
+    "eslint-plugin-react": "^7.12.4",
     "jest": "^23.6.0",
     "react-test-renderer": "^16.6.3",
     "react-testing-library": "^5.3.2",
