--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "allowJs": true,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -13,9 +13,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
-	"lib": ["dom", "ES2015"]
+    "lib": ["dom", "ES2015"]
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
