--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
-    "lib": ["dom", "ES2015"]
+    "lib": ["dom", "es2015"]
   },
   "include": ["src"]
 }
