--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "formik": "^1.5.1",
-    "react": "^16.6.0",
+    "react": "^17.0.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.6.0",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8",
+    "react-scripts": "^5.0.0",
     "yup": "^0.26.6"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
     "@types/enzyme": "^3.1.15",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.10",
@@ -26,7 +27,7 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint-plugin-react": "^7.12.4",
-    "jest": "^23.6.0",
+    "jest": "^27.4.7",
     "react-test-renderer": "^16.6.3",
     "react-testing-library": "^6.0.3",
     "typescript": "^3.2.1"
